--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,9 @@
         {
             "src": "/.*",
             "methods": ["GET", "POST", "PUT", "DELETE"],
-            "allow": ["https://angular-nodejs-realtime-frontend.vercel.app"]
+            "headers": {
+                "Access-Control-Allow-Origin": "https://angular-nodejs-realtime-frontend.vercel.app"
+            }
         }
     ]
 }
